--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.3"
+  },
+  "dependencies": {
+    "axios": "^0.16.1"
   }
 }
